Object type Product class added.