@@ -1,12 +1,7 @@
 package org.example.main;
 
-import java.util.*;
-import java.util.stream.Collectors;
-
-public class ArrayType
-{
-    public static void main( String[] args )
-    {
+public class ArrayType {
+    public static void main(String[] args) {
         //Creation from
 //        List<Integer> list = Arrays.asList(3, 4, 5, 6, 7, 8, 9);
 //        Stream<Integer> stream = list.stream();
@@ -33,15 +28,17 @@ public class ArrayType
 //        Integer integerObj = Integer.valueOf(10); // Boxing: int to Integer
 //        int primitiveInt = integerObj.intValue(); // Unboxing: Integer to int
 //=====================================================================================================================
-     // Q.2)Print Numbers Starts With Prefix '3' using Streams
+        // Q.2)Print Numbers Starts With Prefix '3' using Streams
+//          (Refer question number 5 for nicer approach)
 
 //        List<Integer> list2 = Arrays.asList(2, 34, 45, 23, 55, 243, 319);
 //
 //        List<Integer> collect = list2.stream()
-//                .map(e -> String.valueOf(e)) //Converting each Integer to String
+//                .map(e -> String.valueOf(e)) //Converting each Integer to String => 34 -> "34"
 //                .filter(x -> x.startsWith("3"))
 //                .map(Integer::valueOf)  //Converting String to Integer
 //                .collect(Collectors.toList());
+
 //        System.out.println(collect);
 // ====================================================================================================================
         //Q.3)Print Duplicate Numbers using Streams:-
@@ -49,6 +46,7 @@ public class ArrayType
 //        List<Integer> list2 = Arrays.asList(2, 34, 45,45, 23, 55,55, 243, 319);
 //        int frequency = Collections.frequency(list2, 5); //return frequency or count of the particular number in the collection.
 //        System.out.println(frequency);
+
 //        Set<Integer> collect = list2.stream()
 //                    .filter(e -> Collections.frequency(list2, e) > 1)
 //                    .collect(Collectors.toSet());
@@ -58,6 +56,12 @@ public class ArrayType
         //OR
 
 //        Set<Integer> hs = new HashSet<>();
+//        hs.add(25);
+
+//        Understanding Working of Add Function .add():~
+//        it returns false :- If this set already contains the element, the call leaves the set unchanged and returns false.
+//        it returns true :- If element was not present and set add the value successfully.
+
 //        Set<Integer> collect = list2.stream().filter(x -> !hs.add(x)).collect(Collectors.toSet());
 //        System.out.println(collect);
 
@@ -65,9 +69,10 @@ public class ArrayType
         ///Q.4)Sort the given list in following manner ki even pahle sort ho in descending order and then odd number sort ho in descending order.
 //        List<Integer> list = Arrays.asList(7, 6, 5, 4, 3, 2, 1);
 //
-//        List<Integer> evens = list.stream().filter(n -> n % 2 == 0).sorted((a, b) -> b - a).collect(Collectors.toList());
-//        List<Integer> odds = list.stream().filter(n -> n % 2 != 0).sorted((a, b) -> b - a).collect(Collectors.toList());
-//        List<Integer> collect = Stream.concat(evens.stream(), odds.stream()).collect(Collectors.toList());
+//        List<Integer> evens = list.stream().filter(n -> n % 2 == 0).sorted((a, b) -> b - a).toList();
+//        List<Integer> odds = list.stream().filter(n -> n % 2 != 0).sorted((a, b) -> b - a).toList();
+//
+//        List<Integer> collect = Stream.concat(evens.stream(), odds.stream()).toList();
 //        System.out.println(collect);
 
 //===========================================================================================================================================
@@ -85,15 +90,23 @@ public class ArrayType
 //        boolean isPrime = numbers.stream().anyMatch(x->isPrime(x));
 //        System.out.println("Does this list contain prime? "+isPrime);
 
+//        static  boolean isPrime(int num){
+//        if(num<=1)
+//            return false;
+//
+//        return IntStream.rangeClosed(2,(int)Math.sqrt(num)).noneMatch(i->num%i==0);
+//    }
+
         //==============================================================================================================
         //Q.7)nth smallest element in an array.
-//        int arr[]= {12,3,5,4,7,8,13};
-//        int n = 3;
-        //Smallest
-//        Arrays.stream(arr).sorted().skip(n-1).findFirst().ifPresent(System.out::println);
 
-        //Highest
-//        Arrays.stream(arr).boxed().sorted(Comparator.reverseOrder()).skip(n-1).findFirst().ifPresent(System.out::println);
+//        int[] arr = {12, 3, 5, 4, 7, 8, 13};
+//        int n = 3;
+////        3rd Smallest
+//        Arrays.stream(arr).boxed().sorted().skip(n - 1).findFirst().ifPresent(System.out::println);
+//
+////        3rd Highest
+//        Arrays.stream(arr).boxed().sorted(Comparator.reverseOrder()).skip(n - 1).findFirst().ifPresent(System.out::println);
         //=================================================================================================================
 
         //Q.8)In an array, return true if array contains duplicate element.
@@ -120,7 +133,7 @@ public class ArrayType
 //        int num = 12345;
 //        int sum = String.valueOf(num).chars().map(elm -> Character.getNumericValue(elm)).sum();
 //        System.out.println(sum);
-         ////////////////////////OR/////////////////////////////////////////////////
+//        =================================== OR ===============================================================
 //        int sum = String.valueOf(num)
 //                .chars()
 //                .map(c -> c - '0')
@@ -137,14 +150,14 @@ public class ArrayType
 //                .stream()
 //                .max(Comparator.comparingLong(Map.Entry::getValue))
 //                .map(Map.Entry::getKey)
-//                .ifPresent((elm->System.out.println("Most repeated no is : " +elm)));
+//                .ifPresent(elm->System.out.println("Most repeated no is : " +elm));
 
         /////////////////////OR//////////////////////////////////////////
 
-//        Integer[] arr = {1, 2, 2, 3, 1, 2, 4};
+//        int[] arr = {1, 2, 2, 3, 1, 2, 4};
 //
-//        List<Integer> list = Arrays.asList(arr);
-//
+//        List<Integer> list = Arrays.stream(arr).boxed().toList();
+
 //        Integer mostRepeated = list.stream()
 //                .distinct()
 //                .max(Comparator.comparingInt(e -> Collections.frequency(list, e)))
@@ -189,7 +202,7 @@ public class ArrayType
 //                .min(Comparator.comparingInt(ind -> Math.abs(list.get(ind) - target)))
 //                .orElse(-1);
 //
-//        System.out.println("INdex of closest element is "+ closestIndex + " Closest value is " + list.get(closestIndex));
+//        System.out.println("Index of closest element is "+ closestIndex + " Closest value is " + list.get(closestIndex));
 
         //Variation: Find Even number closest to target.
 
@@ -209,25 +222,20 @@ public class ArrayType
 //                .max(Comparator.naturalOrder())
 //                .ifPresent(System.out::println);
         //===============================================================================================================
-        //Q.16)Implement a meethod to partition a list into 2 groups based on a predicate.
-        List<Integer> numbers = Arrays.asList(1,2,3,4,5,6,7,8,9);
-
-        Map<Boolean, List<Integer>> partioned = numbers.stream()
-                .collect(Collectors.partitioningBy(n -> n % 2 == 0));
-
-        List<Integer> evens = partioned.get(true);
-        List<Integer> odds = partioned.get(false);
-
-        System.out.println("Evens: "+evens);
-        System.out.println("Odds: "+odds);
+        //Q.16)Implement a method to partition a list into 2 groups based on a predicate.
+//        List<Integer> numbers = Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9);
+//
+//        Map<Boolean, List<Integer>> partioned = numbers.stream()
+//                .collect(Collectors.partitioningBy(n -> n % 2 == 0));
+//
+//        List<Integer> evens = partioned.get(true);
+//        List<Integer> odds = partioned.get(false);
+//
+//        System.out.println("Evens: " + evens);
+//        System.out.println("Odds: " + odds);
 
 
     }
 
-//    static  boolean isPrime(int num){
-//        if(num<=1)
-//            return false;
-//
-//        return IntStream.rangeClosed(2,(int)Math.sqrt(num)).noneMatch(i->num%i==0);
-//    }
+
 }
